nRF52 PCA10040 BMI160 sample configuration.

--- a/samples/sensor/bmi160/sample.yaml
+++ b/samples/sensor/bmi160/sample.yaml
@@ -3,6 +3,6 @@ sample:
 tests:
   test:
     harness: sensor
-    platform_whitelist: arduino_101_sss
+    platform_whitelist: arduino_101_sss nrf52_pca10040
     tags: sensors
     depends_on: spi gpio
